Org Link Edit NEWS -- history of user-visible changes   -*- mode: org; -*-

* master (unreleased)

** New features